--- a/src/app/workshop/retrospectives/retrospectives.component.html
+++ b/src/app/workshop/retrospectives/retrospectives.component.html
@@ -3,7 +3,51 @@
     <div class="col-md-12 ml-auto mr-auto">
       <div class="card card-plain card-subcategories">
         <div class="card-body">
-          <ul class="nav nav-pills nav-pills-primary nav-pills-icons justify-content-center tab-progress"
+          <ul class="nav nav-pills nav-pills-primary nav-pills-icons justify-content-center tab-progress1"
+          role="tablist">
+          <li class="nav-item active">
+            <span  class="nav-link select-subject" >
+              <i class="now-ui-icons objects_umbrella-13"></i> Konu Seç
+            </span>
+          </li>
+          <li class="nav-item">
+            <span  class="nav-link select-template"  >
+              <i class="now-ui-icons objects_umbrella-13"></i> Şablon Seç
+            </span>
+          </li>
+
+          <li class="nav-item">
+            <span  class="nav-link brainstorm" >
+              <i class="now-ui-icons objects_umbrella-13"></i> Fikir Geliştir
+            </span>
+          </li>
+          <li class="nav-item">
+            <span  class="nav-link categorize" 
+             >
+              <i class="now-ui-icons shopping_shop"> </i> Kategorize Et
+            </span>
+          </li>
+          <li class="nav-item">
+            <span  class="nav-link comments"  >
+              <i class="now-ui-icons shopping_shop"></i> Yorum Yap
+            </span>
+          </li>
+       
+          <li class="nav-item">
+            <span  class="nav-link vote">
+              <i class="now-ui-icons ui-2_settings-90"></i> Oyla
+            </span>
+          </li>
+
+          <li class="nav-item">
+            <span  class="nav-link idea-archive" >
+              <i class="now-ui-icons ui-2_settings-90"></i>Raporla
+            </span>
+          </li>
+        </ul>
+
+
+          <ul style="visibility: hidden;" class="nav nav-pills nav-pills-primary nav-pills-icons justify-content-center tab-progress"
             role="tablist">
             <li class="nav-item active">
               <a  class="nav-link select-subject" data-toggle="tab" href="#subject"
