--- a/src/app/workshop/report/report.component.html
+++ b/src/app/workshop/report/report.component.html
@@ -5,12 +5,13 @@
   <div class="col-sm-3">
 
     <button id="generate" class="btn btn-success" (click)="createPdf()">CREATE PDF</button>
-
+    <button type="button" class="btn btn-danger ml-10"   (click)="finishRetro()" >Retroyu Bitir</button>
   </div>
 </div>
 
 <div id="report-content" name="report-content" #content class="container form">
   <div class="row">
+    
     <div class="col-sm-12">
       <h2 class="text-center text-danger">YÖNETİCİ ÖZETİ</h2>
       <p>
