--- a/src/app/workshop/report/report.component.html
+++ b/src/app/workshop/report/report.component.html
@@ -4,8 +4,8 @@
   </div>
   <div class="col-sm-3">
 
-    <button id="generate" class="btn btn-success" (click)="createPdf()">CREATE PDF</button>
-    <button type="button" class="btn btn-danger ml-10"   (click)="finishRetro()" >Retroyu Bitir</button>
+    <button id="generate" class="btn btn-success" *ngIf="isLeader()" (click)="createPdf()">CREATE PDF</button>
+    <button type="button" class="btn btn-danger ml-10" *ngIf="isLeader()"   (click)="finishRetro()" >Retroyu Bitir</button>
   </div>
 </div>
 
