--- a/src/app/workshop/retrospectives/retrospectives-init.component.html
+++ b/src/app/workshop/retrospectives/retrospectives-init.component.html
@@ -15,7 +15,7 @@
               <div class="col-12">
                 <div class="form-group">
                   <label>Fikir Hakkı Sayısı</label>
-                  <input type="number" [disabled]="isFailed" class="form-control" [(ngModel)]="config.ideaRight"
+                  <input type="number" [disabled]="isCheckFailed()" class="form-control" [(ngModel)]="config.ideaRight"
                     [ngModelOptions]="{ standalone: true }" />
                 </div>
               </div>
@@ -25,7 +25,7 @@
               <div class="col-12">
                 <div class="form-group">
                   <label>Yorum Hakkı Sayısı</label>
-                  <input type="number" [disabled]="isFailed" class="form-control" [(ngModel)]="config.commentRight"
+                  <input type="number" [disabled]="isCheckFailed()" class="form-control" [(ngModel)]="config.commentRight"
                     [ngModelOptions]="{ standalone: true }" />
                 </div>
               </div>
@@ -35,7 +35,7 @@
               <div class="col-12">
                 <div class="form-group">
                   <label>Oylama Hakkı Sayısı</label>
-                  <input type="number" [disabled]="isFailed" class="form-control" [(ngModel)]="config.voteRight"
+                  <input type="number" [disabled]="isCheckFailed()" class="form-control" [(ngModel)]="config.voteRight"
                     [ngModelOptions]="{ standalone: true }" />
                 </div>
               </div>
@@ -43,7 +43,7 @@
             <div class="row">
               <div class="col-sm-6"></div>
               <div class="col-sm-6 right-side">
-                <button type="submit" [disabled]="isFailed"  class="btn btn-round btn-success btn-lg float-right">
+                <button type="submit" [disabled]="isCheckFailed()"  class="btn btn-round btn-success btn-lg float-right">
                   Başlat
                 </button>
               </div>
