--- a/src/app/workshop/retrospectives/retrospectives.component.html
+++ b/src/app/workshop/retrospectives/retrospectives.component.html
@@ -100,8 +100,8 @@
     </div>
   </div>
 
-
-  <div class="row"  *ngIf="isExistLeader()" >
+<!-- 
+  <div class="row"  *ngIf="isExistLeader() && currentRetro" >
     <div class="col-12">
       <div class="form-group">
         <label>Davet Linki</label>
@@ -115,7 +115,7 @@
       <button class="btn btn-success input-inside-button" type="button" (click)="copyLink(copyInput)" >Kopyala</button>
     </div>
   
-  </div>
+  </div> -->
   <div class="row" *ngIf="isShow">
     <div class="col-md-12 ml-auto mr-auto">
       <div class="form-group">
