--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -18,11 +18,14 @@
         <i class="{{ menuitem.icontype }}"></i>
         <p>{{ menuitem.title }}</p>
       </a>
+      
       <!--If it have a submenu-->
       <a data-toggle="collapse" href="#{{ menuitem.title }}" *ngIf="menuitem.type === 'sub'">
         <i class="{{ menuitem.icontype }}"></i>
         <p>{{ menuitem.title }}<b class="caret"></b></p>
       </a>
+
+      
 
       <!--Display the submenu items-->
       <div id="{{ menuitem.title }}" class="collapse" *ngIf="menuitem.type === 'sub'">
@@ -33,13 +36,21 @@
               <span class="sidebar-normal">{{ childitem.title }}</span>
             </a>
           </li>
+
+     
         </ul>
       </div>
     </li>
 
-
-
+    <li *ngIf="isLeader() && currentRetro.id" >
+      <!--If is a single link-->
+      <a (click)="copyLink()">
+        <i class="fa fa-envelope"></i>
+        <p>Davet Linki</p>
+      </a>
+    </li>
   </ul>
+ 
   <ul class="nav online-user" *ngIf="users.length>0" >
 
     <div style="max-height:50vh; overflow-y: scroll;">
