--- a/src/app/workshop/comments/comments.component.html
+++ b/src/app/workshop/comments/comments.component.html
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="category__comments mt-3" *ngFor="let com of msg.comments">
-        <div class="card card-theme card-theme--blue mb-3 w-75 box-shadow-xs" >
+        <div class="card card-theme card-theme--blue w-75 box-shadow-xs" >
           <div class="card-body p-1 text-dark">
             {{ com.commentText }}
           </div>
