--- a/src/app/workshop/groups/groups.component.html
+++ b/src/app/workshop/groups/groups.component.html
@@ -1,5 +1,5 @@
 
-<div class="d-flex justify-content-between mb-4 mt-3">
+<div class="d-flex align-items-center justify-content-between mb-4 mt-5">
   <!-- <h4 class="pill-title mb-0" [ngClass]="{'text-success': getUserLeader()>0, 'text-danger':getUserLeader()<=0 }">Grup
     Oluşturma Hakkı: {{ getUserLeader() }} </h4> -->
     <h3 class=" mb-0">Gruplar</h3>
