--- a/src/app/workshop/report/report.component.html
+++ b/src/app/workshop/report/report.component.html
@@ -83,13 +83,12 @@
 
 
   <div class="report-header">
-    <h1 class="report-header__title report-header__title--sm">Raporlar</h1>
+    <h1 class="report-header__title">Rapor</h1>
     <span class="report-header__description">
       Bu bölümünde atölye çalışmasının sonunda ortaya çıkan fikirler, bu fikirlere ait yorumlar, her bir fikire ait
       oylama sonuçları sunulmuştur.
     </span>
   </div>
-
 
   <div class="report-section mb-5">
     <h2 class="report-section__title">Konu</h2>
