--- a/src/app/workshop/admin/admin.component.html
+++ b/src/app/workshop/admin/admin.component.html
@@ -1,5 +1,5 @@
-<div class="row   mb-3">
-  <div class="col-sm-6">
+<div class="row   mb-3 mt-5">
+  <div class="col-sm-6 d-flex align-items-center">
     <h3 class="float-left">Adminler</h3>
   </div>
   <div class="col-sm-6">
@@ -17,7 +17,7 @@
           <th>Eposta</th>
           <th>Şirket</th>
 
-          <th>İşlemler</th>
+          <th class="text-right">İşlemler</th>
         </tr>
       </thead>
       <tbody>
@@ -30,20 +30,22 @@
 
 
           <td>
-            <button (click)="OpenPasswordModal(row)" class="btn btn-default btn-icon-theme"><i
-                class="fa fa-key"></i></button>
-            <button (click)="SendMail(row.id)" class="btn btn-default btn-icon-theme"><i
-                class="fa fa-paper-plane"></i></button>
+         <div class="d-flex align-items-center justify-content-end">
+          <button (click)="OpenPasswordModal(row)" class="btn btn-default btn-icon-theme"><i
+            class="fa fa-key"></i></button>
+        <button (click)="SendMail(row.id)" class="btn btn-default btn-icon-theme"><i
+            class="fa fa-paper-plane"></i></button>
 
-            <button (click)="editUser(row.id)" class="btn btn-default btn-icon-theme"><i
-                class="fa fa-edit"></i></button>
-            <button (click)="
-          showSwal(
-            'warning-message-and-confirmation-delete',
-            row.id
-          )
-        " class="btn btn-default btn-icon-theme"><i class="fa fa-trash"></i></button>
+        <button (click)="editUser(row.id)" class="btn btn-default btn-icon-theme"><i
+            class="fa fa-edit"></i></button>
+        <button (click)="
+      showSwal(
+        'warning-message-and-confirmation-delete',
+        row.id
+      )
+    " class="btn btn-default btn-icon-theme"><i class="fa fa-trash"></i></button>
 
+         </div>
           </td>
 
 
