--- a/src/app/workshop/brainstorm/brainstorm.component.html
+++ b/src/app/workshop/brainstorm/brainstorm.component.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="row mt-5">
-  <div class="col" *ngFor="let detail of template.templateDetail; let i = index">
+  <div class="col-xl-2 col-lg-3 col-md-4 col-12 " *ngFor="let detail of template.templateDetail; let i = index">
     <h3 class="section-title" *ngIf="
     template.templateDetail.length >= 1 &&
     template.templateDetail[0].header != ''
