--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,7 @@
     width: 100%;
     height: 5px;
   }
+
+  .mini-btn {display:flex;align-items: center;flex-wrap: wrap;
+    span {font-size: 14px;font-weight: 500;background-color: #2E3448;color: white;padding: 4px 7px;text-align: center;border-radius: 4px;margin-right: 5px;cursor: pointer;}
+}
