--- a/src/app/workshop/company-management/company-management.component.html
+++ b/src/app/workshop/company-management/company-management.component.html
@@ -19,7 +19,7 @@
         <th>Şirket Adı</th>
         <th class="text-center">Maksimum Katılımcı</th>
         <th class="text-center">Maksimum Retro</th>
-        <th class="text-right">İşlemler</th>
+        <th class="text-right" style="padding-right: 20px;">İşlemler</th>
       </tr>
       </thead>
       <tbody>
