--- a/src/app/workshop/subject/subject.component.html
+++ b/src/app/workshop/subject/subject.component.html
@@ -1,12 +1,12 @@
-<div class="row   mb-3 mt-5">
-  <div class="col-sm-6 d-flex align-items-center">
-    <h3 class="float-left mb-0">Konular</h3>
-  </div>
-  <div class="col-sm-6">
-    <button class=" float-right btn btn-theme btn-horizontal-padding btn-vertical-padding" data-toggle="modal"
-      data-target="#addModal"> Konu Ekle </button>
-  </div>
+
+
+
+<div class="d-flex align-items-center justify-content-between mb-3 mt-4">
+  <h3 class=" mb-0">Konular</h3>
+<button class="btn btn-theme btn-vertical-padding btn-horizontal-padding-md" data-toggle="modal"
+  data-target="#addModal">Konu Ekle </button>
 </div>
+
 
 
 <div class="card card-theme">
