--- a/src/app/workshop/super-user-management/super-user-management.component.html
+++ b/src/app/workshop/super-user-management/super-user-management.component.html
@@ -17,7 +17,7 @@
           <th>Eposta</th>
         
 
-          <th class="text-right">İşlemler</th>
+          <th class="text-right" style="padding-right: 50px;">İşlemler</th>
         </tr>
       </thead>
       <tbody>
