--- a/src/app/workshop/brainstorm/brainstorm.component.html
+++ b/src/app/workshop/brainstorm/brainstorm.component.html
@@ -7,16 +7,17 @@
 </div>
 
 <div class="row mt-5">
-  <div class="col-xl-2 col-lg-3 col-md-4 col-12 " *ngFor="let detail of template.templateDetail; let i = index">
-    <h3 class="section-title" *ngIf="
+  <div   [ngClass]="{'col-xl-2':template.templateDetail.length>6, 'col':template.templateDetail.length<=6}" *ngFor="let detail of template.templateDetail; let i = index">
+    <h5  class="mt-2" *ngIf="
     template.templateDetail.length >= 1 &&
     template.templateDetail[0].header != ''
-  "> {{ detail.header }}</h3>
+  "> {{ detail.header }}</h5>
     <div class="card card-theme card-theme--warning">
       <div class="card-body p-0">
-        <textarea [disabled]="retroRight.ideaRight <= 0" style="border: none;" rows="10" class="form-control  card-theme--warning scroll"
+        <div class="form-group">
+        <textarea  [disabled]="retroRight.ideaRight <= 0" style="border: none;" style="height: auto !important;resize: none;border:none;" rows="3" class="form-control  card-theme--warning scroll"
           [(ngModel)]="inputText[detail.id]" (keydown.enter)="sendMessage(detail.id)"></textarea>
-  
+        </div>
       </div>
     </div>
     <div *ngFor="let msg of messages">
