--- a/src/app/workshop/comments/comments.component.html
+++ b/src/app/workshop/comments/comments.component.html
@@ -6,24 +6,24 @@
 
 <div class="categories mt-5">
   <div class="category" *ngFor="let tmp of template.templateDetail">
-    <h2 class="category__title">{{tmp.header}}</h2>
-    <div *ngFor="let msg of GetHeaderMessage(tmp.id)" class="mt-5">
+    <h5 *ngIf="GetHeaderMessage(tmp.id).length>0">{{tmp.header}}</h5>
+    <div *ngFor="let msg of GetHeaderMessage(tmp.id)" class="mt-3">
       <div class="card card-theme box-shadow-sm border-radius-lg">
         <div class="card-body p-2 d-flex justify-content-between">
           <div class="content">
             {{ msg.messageText }}
           </div>
-          <button [disabled]="retroRight.commentRight <= 0"
-          (click)="addCommentModal(msg)" class="btn btn-theme btn-vertical-padding btn-horizontal-padding-md ml-3">Yorum Yap</button>
+          <button [disabled]="retroRight.commentRight <= 0" (click)="addCommentModal(msg)"
+            class="btn btn-theme btn-vertical-padding btn-horizontal-padding-md ml-3">Yorum Yap</button>
         </div>
       </div>
       <div class="category__comments mt-3" *ngFor="let com of msg.comments">
-        <div class="card card-theme card-theme--blue w-75 box-shadow-xs" >
+        <div class="card card-theme card-theme--blue w-75 box-shadow-xs">
           <div class="card-body p-1 text-dark">
             {{ com.commentText }}
           </div>
         </div>
-       
+
       </div>
     </div>
   </div>
@@ -58,34 +58,26 @@
           </button>
         </div>
         <div class="modal-body">
-        <textarea
-          style="padding: 5px; max-height: 300px !important; height: 200px"
-          class="form-control textarea"
-          [disabled]="retroRight.commentRight == 0"
-          [(ngModel)]="commentText"
-          [ngModelOptions]="{ standalone: true }" 
-          (keydown.enter)="sendComment()"
-        ></textarea>
-      </div>
-      <div class="modal-footer">
-          <button
-            type="button"
-            class="btn btn-default btn-outline-theme btn-block btn-vertical-padding"
-            data-dismiss="modal"
-          >
+
+          <div class="form-group">
+            <textarea style="height: auto !important;" rows="5" class="form-control"
+              [disabled]="retroRight.commentRight == 0" [(ngModel)]="commentText"
+              [ngModelOptions]="{ standalone: true }" (keydown.enter)="sendComment()"></textarea>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default btn-outline-theme btn-block btn-vertical-padding"
+            data-dismiss="modal">
             Vazgeç
           </button>
-      
-          <button
-            type="button"
-            (click)="sendComment()"
-            class="btn btn-theme btn-block mt-0 btn-vertical-padding justify-content-center"
-          >
+
+          <button type="button" (click)="sendComment()"
+            class="btn btn-theme btn-block mt-0 btn-vertical-padding justify-content-center">
             Gönder
           </button>
-      
+
+        </div>
       </div>
     </div>
-  </div>
   </form>
 </div>
