--- a/src/app/workshop/report/report.component.html
+++ b/src/app/workshop/report/report.component.html
@@ -1,12 +1,14 @@
 <div class="report" id="report-content" name="report-content" #content class="container form">
- 
+
 
   <div class="row">
     <div class="container">
-      <button type="button" class="btn btn-danger float-right ml-5" *ngIf="isLeader()" (click)="finishRetro()">Retroyu Bitir</button>
+      <button type="button" class="btn btn-danger float-right ml-5" *ngIf="isLeader()" (click)="finishRetro()">Retroyu
+        Bitir</button>
 
-      <button id="generate" class="btn btn-success float-right" *ngIf="isLeader()" (click)="createPdf()">CREATE PDF</button>
-    
+      <button id="generate" class="btn btn-success float-right" *ngIf="isLeader()" (click)="createPdf()">
+        PDF Oluştur</button>
+
     </div>
   </div>
 
@@ -23,7 +25,7 @@
   </div>
 
   <div class="report-section mb-5">
-    <h2 class="report-section__title">Konu</h2>
+    <h3 class="report-section__title">Konu</h3>
     <div class="card card-theme card-theme--cyan mb-3">
       <div class="card-body p-2">
         <h4 class="card-title">{{subject.subjectTitle}}</h4>
@@ -36,19 +38,19 @@
 
 
   <div class="report-section mb-5" *ngIf="categorizedMessages.length>0">
-    <h2 class="report-section__title">Öncelikli Fikirler</h2>
+    <h3 class="report-section__title">Öncelikli Fikirler</h3>
 
     <div *ngFor="let tmp of template.templateDetail">
       <div *ngIf="GetHeaderCategorizedMessages(tmp.id).length>0">
-        <h3 class="report-section__subtitle">{{tmp.header}}</h3>
+        <h5 class="report-section__subtitle">{{tmp.header}}</h5>
         <div class="report-section__content">
           <div class="card card-theme box-shadow-xs mb-3"
             *ngFor=" let message of GetHeaderCategorizedMessages(tmp.id);let index">
             <div class="card-body p-1 d-flex">
-              <div class="card-description">
+              <div class="card-description " style="width: 95%;">
                 {{message.messageText}}
               </div>
-              <div class="d-flex align-items-end">
+              <div class="d-flex align-items-end" style="width: 5%;">
                 <button class="btn btn-icon-theme"><i class="fa fa-thumbs-up"></i> ({{message.voteCount}})</button>
               </div>
             </div>
@@ -63,17 +65,21 @@
 
 
   <div class="report-section mb-5" *ngIf="messages.length>0">
-    <h2 class="report-section__title">Diğer Fikirler</h2>
+    <h3 class="report-section__title">Diğer Fikirler</h3>
+
     <div *ngFor="let tmp of template.templateDetail">
-      <h3 class="report-section__subtitle">{{tmp.header}}</h3>
-      <div class="report-section__content" *ngFor="let message of GetHeaderMessage(tmp.id)">
-        <div class="card card-theme box-shadow-xs mb-3">
-          <div class="card-body p-1 d-flex">
-            <div class="card-description">
-              {{message.messageText}}
-            </div>
-            <div class="d-flex align-items-end">
-              <button class="btn btn-icon-theme"><i class="fa fa-thumbs-up"></i> ({{message.voteCount}})</button>
+      <div *ngIf="GetHeaderMessage(tmp.id).length>0">
+
+        <h5 class="report-section__subtitle">{{tmp.header}}</h5>
+        <div class="report-section__content" *ngFor="let message of GetHeaderMessage(tmp.id)">
+          <div class="card card-theme box-shadow-xs mb-3">
+            <div class="card-body p-1 d-flex">
+              <div class="card-description" style="width: 95%;"> 
+                {{message.messageText}}
+              </div>
+              <div class="d-flex align-items-end" style="width: 5%;">
+                <button class="btn btn-icon-theme"><i class="fa fa-thumbs-up"></i> ({{message.voteCount}})</button>
+              </div>
             </div>
           </div>
         </div>
@@ -91,7 +97,7 @@
   </div>
 
   <div class="report-section mb-5">
-    <h2 class="report-section__title">Konu</h2>
+    <h3 class="report-section__title">Konu</h3>
     <div class="card card-theme card-theme--cyan mb-3">
       <div class="card-body p-2">
         <h4 class="card-title"> {{subject.subjectTitle}}</h4>
@@ -106,18 +112,18 @@
 
 
   <div class="report-section category" *ngIf="categorizedMessages.length>0">
-    <h2 class="report-section__title">Öncelikli Fikirler</h2>
+    <h3 class="report-section__title">Öncelikli Fikirler</h3>
     <div *ngFor="let tmp of template.templateDetail">
       <div *ngIf="GetHeaderCategorizedMessages(tmp.id).length>0">
-        <h3 class="report-section__subtitle">{{tmp.header}}</h3>
+        <h5 class="report-section__subtitle">{{tmp.header}}</h5>
         <div class="report-section__content">
           <div class="card card-theme box-shadow-xs mb-3"
             *ngFor=" let message of GetHeaderCategorizedMessages(tmp.id);let index">
             <div class="card-body p-1 d-flex">
-              <div class="card-description">
+              <div class="card-description" style="width: 95%;">
                 {{message.messageText}}
               </div>
-              <div class="d-flex align-items-end">
+              <div class="d-flex align-items-end" style="width: 5%;">
                 <button class="btn btn-icon-theme"><i class="fa fa-thumbs-up"></i> ({{message.voteCount}})</button>
               </div>
             </div>
@@ -138,17 +144,17 @@
 
 
   <div class="report-section category" *ngIf="messages.length>0">
-    <h2 class="report-section__title">Diğer Fikirler</h2>
+    <h3 class="report-section__title">Diğer Fikirler</h3>
     <div *ngFor="let tmp of template.templateDetail">
       <div *ngIf="GetHeaderMessage(tmp.id).length>0">
-        <h3 class="report-section__subtitle">{{tmp.header}}</h3>
+        <h5 class="report-section__subtitle">{{tmp.header}}</h5>
         <div class="report-section__content" *ngFor="let message of GetHeaderMessage(tmp.id)">
           <div class="card card-theme box-shadow-xs mb-3">
             <div class="card-body p-1 d-flex">
-              <div class="card-description">
+              <div class="card-description" style="width: 95%;">
                 {{message.messageText}}
               </div>
-              <div class="d-flex align-items-end">
+              <div class="d-flex align-items-end" style="width: 5%;">
                 <button class="btn btn-icon-theme"><i class="fa fa-thumbs-up"></i> ({{message.voteCount}})</button>
               </div>
             </div>
