--- a/src/app/workshop/templates/templates.component.html
+++ b/src/app/workshop/templates/templates.component.html
@@ -1,13 +1,10 @@
-<div class="row   mb-3">
-  <div class="col-sm-6">
-    <h3 class="float-left">Şablonlar</h3>
-  </div>
-  <div class="col-sm-6">
-    <button class=" float-right btn btn-theme btn-horizontal-padding btn-vertical-padding" data-toggle="modal"
-      data-target="#addModal">Şablon Ekle  <i class="fa fa-plus ml-2"></i>
-    </button>
-  </div>
+
+<div class="d-flex align-items-center justify-content-between mb-3 mt-4">
+  <h3 class=" mb-0">Şablonlar</h3>
+<button class="btn btn-theme btn-vertical-padding btn-horizontal-padding-md" data-toggle="modal"
+  data-target="#addModal">Şablon Ekle </button>
 </div>
+
 
 
 
