--- a/src/app/workshop/user-management/user-management.component.html
+++ b/src/app/workshop/user-management/user-management.component.html
@@ -1,8 +1,11 @@
-<div class="d-flex align-items-center justify-content-between mb-3 mt-3 users-header mb-5">
-  <h3 class="card-title float-left">Kullanıcılar</h3>
-
+<div class="d-flex align-items-center justify-content-between  mb-3  mt-4 users-header ">
+  
+  <h3 class=" mb-0">Kullanıcılar</h3>
+  <button class="btn btn-theme btn-vertical-padding btn-horizontal-padding-md" (click)="newUser()">
+    Kullanıcı Ekle
+  </button>
 </div>
-<div class="d-flex align-items-center justify-content-between mb-3 mt-3 users-header mb-5">
+<div class="d-flex align-items-center justify-content-between mb-2 users-header ">
   <div class="users-details">
     <span class="pill-title mr-2 text-bold"
       [ngClass]="{'text-success': getUserLeader()>0, 'text-danger':getUserLeader()<=0 }">Lider Hakkı: {{ getUserLeader()
@@ -12,7 +15,7 @@
       }}</span>
   </div>
   <div class="add-user">
-    <div class="form-group">
+    <div class="form-group" style="margin-right: 0 !important;">
 
       <select class="form-control" (change)="changeUserType()" [(ngModel)]="userType"
         [ngModelOptions]="{ standalone: true }">
@@ -21,9 +24,7 @@
       </select>
 
     </div>
-    <button class="btn btn-theme btn-vertical-padding btn-horizontal-padding-md" (click)="newUser()">
-      Kullanıcı Ekle
-    </button>
+   
   </div>
 </div>
 
@@ -35,7 +36,7 @@
           <th>Kullanıcı Adı</th>
           <th>Şifre</th>
           <th>Statü</th>
-          <th width="20%" class="text-center">İşlemler</th>
+          <th  class="text-center">İşlemler</th>
         </tr>
       </thead>
       <tbody>
@@ -54,7 +55,7 @@
                   row.id
                 )
               " type="button" class="btn btn-default btn-icon-theme">
-              <i class="fa fa-trash fa-2x"></i>
+              <i class="fa fa-trash"></i>
             </button>
           </td>
         </tr>
