--- a/src/app/workshop/vote/vote.component.html
+++ b/src/app/workshop/vote/vote.component.html
@@ -60,7 +60,7 @@
 
             <div class="row" *ngFor="let comment of message.comments">
               <div class="col-md-12">
-                <div class="card">
+                <div class="card mt-2">
                   <div class="card-header">
                     {{ comment.commentText }}
                   </div>
