--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,9 +5,6 @@
  @import "assets/scss/main.scss";
 
 
- .scroll::-webkit-scrollbar {
-    display: none;
-  }
 
   [data-notify="progressbar"] {
     margin-bottom: 0px;
@@ -20,4 +17,18 @@
 
   .mini-btn {display:flex;align-items: center;flex-wrap: wrap;
     span {font-size: 14px;font-weight: 500;background-color: #2E3448;color: white;padding: 4px 7px;text-align: center;border-radius: 4px;margin-right: 5px;cursor: pointer;}
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
